--- a/gogogo.html
+++ b/gogogo.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="gogogo.css" rel=stylesheet type="text/css">
-		<script type="text/javascript" src="gogogo.js"></script>
+		<link href="stylesheets/gogogo.css" rel=stylesheet type="text/css">
+		<script type="text/javascript" src="javascripts/gogogo.js"></script>
 	</head>
 	<body>
 		<div id="world">
