--- a/gogogo.html
+++ b/gogogo.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="world">
-			<div class="box" id="userBox"><img src="wat2.png"></div>
+			<div class="box" id="userBox"><img src="images/wat2.png"></div>
 		</div>
 	</body>
 
